--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "basiclightbox": "^5.0.3",
     "body-scroll-lock": "^3.1.5",
     "browser-sync": "^2.26.13",
