added bootstrap, some styles to header, popups for rules and result, popup result show when time is up, removed unused scss files

--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
   },
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "bootstrap": "^5.0.0-alpha3",
     "core-js": "^3.6.5",
     "eslint": "^7.12.1",
     "handlebars": "^4.7.6",
+    "popper.js": "^1.16.1",
     "prettier": "^2.1.2",
     "uuid": "^8.3.1"
   }
